--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -7,11 +7,15 @@ body {
     background-color: #f6f8fc;
 }
 
-.content {
+.content  {
     width: 100vw;
     height: 100vh;
     padding: 1rem;
     background-color: #fff;
+}
+
+h1 {
+    text-align: center;
 }
 
 @media screen and (min-width: 992px) {
