--- a/assets/css/pokedexIndividual.css
+++ b/assets/css/pokedexIndividual.css
@@ -1,3 +1,4 @@
+
 .pokemonIndividual {
     background-color: #222831;
     height: 37rem;
@@ -7,19 +8,23 @@
     align-items: center;
     box-shadow: rgba(0, 0, 0, 0.7);
     color: white;
+    margin: 0;
+    padding: 0;
   }
 
   .containerHabilidades {
     display: flex;
     flex-direction: column;
     justify-items: left;
+    line-height: 20px;
   }
 
  .height {
     color: red;
     opacity: .8;
     text-align: right;
-    font-size: 1rem;
+    font-size: .8rem;
+    text-align: left;
     
 }
 
@@ -27,7 +32,8 @@
     color: red;
     opacity: .8;
     text-align: right;
-    font-size: 1rem;
+    font-size: .8rem;
+    text-align: left;
 }
 
 .peso {
@@ -41,24 +47,40 @@
 .name {
         margin-top: 15px;
         font-size: 1.5rem;
+        text-align: center;
+        padding-bottom: 0.5rem;
 }
 
 .move {
     color: red;
     opacity: .8;
     text-align: right;
-    font-size: 1.0rem;
+    font-size: 0.8rem;
+    text-align: left;
 }
 
 .ataque1{
     color: blue;
 }
 
-.detail .img {
-    height: 160px;
-    width: 160px;
+.detailIndividualCard img {
+    height: 120px;
+    width: 120px;
     border-radius: 50%;
     border: 5px solid #272133;
     margin-top: 20px;
     box-shadow: 0 10px 50px rgba(235, 25, 110, 1);
+  }
+
+  .pokebola img {
+
+    width: 180px;
+    padding-top: 20px;
+  }
+
+  .olPokemonIndividual {
+    display: flex;
+    justify-content: center; /* Centraliza horizontalmente */
+    align-items: center; /* Centraliza verticalmente */
+    height: 100vh;
   }
